--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -46,22 +46,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "eOxWbpwOFIP6",
-        "outputId": "981aa38a-996b-4e06-daa3-4e37454e426f"
+        "outputId": "919263c1-31bc-4871-843d-c02ea11696a2"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Welcome to Machine Learning!\n"
+            "Welcome to Machine Learning with Python!\n"
           ]
         }
       ],
       "source": [
-        "print(\"Welcome to Machine Learnings!\")"
+        "print(\"Welcome to Machine Learning with Python!\")"
       ]
     },
     {
